; ModuleID = '/home/carl/AnghaBench/git/extr_sha1-file.c_check_tree.c'
source_filename = "/home/carl/AnghaBench/git/extr_sha1-file.c_check_tree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tree_desc = type { i32 }
%struct.name_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @check_tree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_tree(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.tree_desc, align 4
  %6 = alloca %struct.name_entry, align 4
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = load i64, i64* %4, align 8
  %9 = call i32 @init_tree_desc(%struct.tree_desc* %5, i8* %7, i64 %8)
  br label %10

10:                                               ; preds = %13, %2
  %11 = call i64 @tree_entry(%struct.tree_desc* %5, %struct.name_entry* %6)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %10
  br label %10

14:                                               ; preds = %10
  ret void
}

declare dso_local i32 @init_tree_desc(%struct.tree_desc*, i8*, i64) #1

declare dso_local i64 @tree_entry(%struct.tree_desc*, %struct.name_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
